--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13141,6 +13141,8 @@ div#notebook {
 <li><a href="./Fall2023/kmz25_see62/kmz25_see62.html">Christmas caroling muscle machine</a> (<a href="https://www.youtube.com/watch?v=M_8KR_ICSG0">video description</a>)</li>
 <li><a href="./Fall2023/lsl95_kz85/index.html">Hand conductor</a> (<a href="https://www.youtube.com/watch?v=HCNzZyf06as">video description</a>)</li>
 <li><a href="./Fall2023/ml2226_cca54/index.html">Pico says</a> (<a href="https://www.youtube.com/watch?v=BNBXwJf55fs">video description</a>)</li>
+<li><a href="./Fall2023/pbb65/pbb65homepage.html">MIDI input synthesizer</a> (<a href="https://www.youtube.com/watch?v=gv6tslaxl0o">video description</a>)</li>
+<li><a href="./Fall2023/rdg244_ewz4/index.html">Soundweaver</a> (<a href="https://www.youtube.com/watch?v=427vY8pIdWY">video description</a>)</li>
 </ul>
 
 </div>
