--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13143,6 +13143,8 @@ div#notebook {
 <li><a href="./Fall2023/ml2226_cca54/index.html">Pico says</a> (<a href="https://www.youtube.com/watch?v=BNBXwJf55fs">video description</a>)</li>
 <li><a href="./Fall2023/pbb65/pbb65homepage.html">MIDI input synthesizer</a> (<a href="https://www.youtube.com/watch?v=gv6tslaxl0o">video description</a>)</li>
 <li><a href="./Fall2023/rdg244_ewz4/index.html">Soundweaver</a> (<a href="https://www.youtube.com/watch?v=427vY8pIdWY">video description</a>)</li>
+<li><a href="./Fall2023/yl2924_yl996/index.html">Watermelon game</a> (<a href="https://www.youtube.com/watch?v=ZxyzBawe35w">video description</a>)</li>
+<li><a href="./Fall2023/ks977_zl647_yf372/index.html">Gyroscope-controlled labrynth game</a> (<a href="https://www.youtube.com/watch?v=onVuS9nOsp4">video description</a>)</li>
 </ul>
 
 </div>
