corrected some student html

--- a/Projects/Fall2023/ir93_rak277/index.html
+++ b/Projects/Fall2023/ir93_rak277/index.html
@@ -84,7 +84,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure1.PNG" 
+                <span class="image"><img src="images/figure1.png" 
                                     width = "500"
                                     height = "150"
                                     alt="Mandelbrot Equation" /></span>
@@ -111,7 +111,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure2.PNG" 
+                <span class="image"><img src="images/figure2.png" 
                                     width = "900"
                                     height = "150"
                                     alt="Scaling Equations" /></span>
@@ -124,7 +124,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure3.PNG" 
+                <span class="image"><img src="images/figure3.png" 
                                     width = "800"
                                     height = "400"
                                     alt="Color Table" /></span>
@@ -156,7 +156,7 @@
 
             
             <div class="box">
-                <span class="image"><img src="images/figure4.PNG" 
+                <span class="image"><img src="images/figure4.png" 
                                     width = "500"
                                     height = "600"
                                     alt="Column Loading" /></span>
@@ -179,7 +179,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure5.PNG" 
+                <span class="image"><img src="images/figure5.png" 
                                     width = "1000"
                                     height = "400"
                                     alt="Column Loading" /></span>
@@ -190,7 +190,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure6.PNG" 
+                <span class="image"><img src="images/figure6.png" 
                                     width = "850"
                                     height = "200"
                                     alt="Column Loading" /></span>
@@ -201,7 +201,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure7.PNG" 
+                <span class="image"><img src="images/figure7.png" 
                                     width = "700"
                                     height = "450"
                                     alt="VGA" /></span>
@@ -219,7 +219,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure8.PNG" 
+                <span class="image"><img src="images/figure8.png" 
                                     width = "600"
                                     height = "800"
                                     alt="Circuit" /></span>
@@ -298,7 +298,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure9.PNG" 
+                <span class="image"><img src="images/figure9.png" 
                                     width = "900"
                                     height = "620"
                                     alt="perfData" /></span>
@@ -307,7 +307,7 @@
             <p></p>
 
             <div class="box">
-                <span class="image"><img src="images/figure10.PNG" 
+                <span class="image"><img src="images/figure10.png" 
                                     width = "900"
                                     height = "620"
                                     alt="I2CData" /></span>
@@ -331,7 +331,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure11.PNG" 
+                <span class="image"><img src="images/figure11.png" 
                                     width = "870"
                                     height = "650"
                                     alt="screenImage" /></span>
@@ -346,7 +346,7 @@
             </p>
 
             <div class="box">
-                <span class="image"><img src="images/figure12.PNG" 
+                <span class="image"><img src="images/figure12.png" 
                                     width = "900"
                                     height = "100"
                                     alt="screenImage" /></span>
