--- a/Projects/Fall2023/jmh469_na325_gjt29/index.html
+++ b/Projects/Fall2023/jmh469_na325_gjt29/index.html
@@ -46,7 +46,7 @@
       <!-- <h3>ECE3140 / CS 3420: pH Sensor</h3>
       <p>Michelle Li (myl39), Noah Abramson (na325), Nathan Raklin (npr29)</p>
       <hr /> -->
-      <ol>
+<!--       <ol>
         <video width="640" height="480" controls>
           <source src="images/movie.mp4" type="video/mp4"
             style="vertical-align:middle;margin:0px 175px"
@@ -55,7 +55,8 @@
         Your browser does not support the video tag.
         </video>
       </ol>
-      <ol>
+      <ol> -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cCiQPnGFKOM?si=rulEcps4NMkloLvP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h4>Project Introduction</h4>
         <hr />
         <!-- <li>
