--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13077,7 +13077,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Final-projects-for-ECE-4760/5730">Final projects for <a href="https://ece4760.github.io">ECE 4760/5730</a><a class="anchor-link" href="#Final-projects-for-ECE-4760/5730">&#182;</a></h1><p>This webpage links student-generated webpages describing their final projects for <a href="https://ece4760.github.io">ECE 4760/5730</a> at Cornell University.</p>
+<h1 id="Final-projects-for-ECE-4760/5730">Final projects for <a href="https://ece4760.github.io">ECE 4760/5730</a><a class="anchor-link" href="#Final-projects-for-ECE-4760/5730">&#182;</a></h1><p>This webpage links student-generated webpages describing their final projects for <a href="https://ece4760.github.io">ECE 4760/5730</a> at Cornell University. Instructed by <a href="https://vanhunteradams.com">V. Hunter Adams</a>.</p>
 
 </div>
 </div>
