--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13101,7 +13101,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Fall,-2023">Fall, 2023<a class="anchor-link" href="#Fall,-2023">&#182;</a></h3><ul>
+<h3 id="Fall,-2023">Fall, 2023<a class="anchor-link" href="#Fall,-2023">&#182;</a></h3><ol>
 <li><a href="./Fall2023/cdc227_ms2663_vs356/Project%20Introduction.html">Gesture-controlled Game</a> (<a href="https://www.youtube.com/watch?v=eWwDzLKzAFY">video demonstration</a>)</li>
 <li><a href="./Fall2023/jnh84_lcd49/jnh84_lcd49.html">Automated hydroponics system</a> (<a href="https://www.youtube.com/watch?v=3DqP95uvAP0">video demonstration</a>)</li>
 <li><a href="./Fall2023/nnb28_vb269/RPee2040.html">RPee2040</a> (<a href="https://www.youtube.com/watch?v=75KFdw1hYbY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;t=2s">video demonstration</a>)</li>
@@ -13145,7 +13145,8 @@ div#notebook {
 <li><a href="./Fall2023/rdg244_ewz4/index.html">Soundweaver</a> (<a href="https://www.youtube.com/watch?v=427vY8pIdWY">video description</a>)</li>
 <li><a href="./Fall2023/yl2924_yl996/index.html">Watermelon game</a> (<a href="https://www.youtube.com/watch?v=ZxyzBawe35w">video description</a>)</li>
 <li><a href="./Fall2023/ks977_zl647_yf372/index.html">Gyroscope-controlled labrynth game</a> (<a href="https://www.youtube.com/watch?v=onVuS9nOsp4">video description</a>)</li>
-</ul>
+<li><a href="./Fall2023/wb273/index.html">RadioChat</a> (<a href="https://www.youtube.com/watch?v=zv5Eqr0OXQg">video description</a>)</li>
+</ol>
 
 </div>
 </div>
@@ -13153,7 +13154,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Fall,-2022">Fall, 2022<a class="anchor-link" href="#Fall,-2022">&#182;</a></h3><ul>
+<h3 id="Fall,-2022">Fall, 2022<a class="anchor-link" href="#Fall,-2022">&#182;</a></h3><ol>
 <li><a href="./Fall2022/mmc323-jah569-rm857/index.html">Persistence of vision LED display</a> (<a href="https://www.youtube.com/watch?v=vRa5mGe45jk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=1">video demonstration</a>)</li>
 <li><a href="./Fall2022/tg382_kaf245/index.html">Recreating the Red Light Green Light doll from Squid Games</a> (<a href="https://www.youtube.com/watch?v=qmjJvgB3ehk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=23">video demonstration</a>)</li>
 <li><a href="./Fall2022/afp65_mib57_ens57/index.html">Handwriting recognition</a> (<a href="https://www.youtube.com/watch?v=teCES6Atgzo&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=39">video demonstration</a>)</li>
@@ -13193,7 +13194,7 @@ div#notebook {
 <li><a href="./Fall2022/spd75_cea57/index.html">Syyynth hero rhythm game</a> (<a href="https://www.youtube.com/watch?v=SYxIqJ6wqH0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=8">video demonstration</a>)</li>
 <li><a href="./Fall2022/yj253_lh494_cz236/index.html">Glove-controlled robot hand</a> (<a href="https://www.youtube.com/watch?v=G2LN8rhvrco&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=33">video demonstration</a>)</li>
 <li><a href="./Fall2022/emg229_cc2698_jcp327/FinalReport.html">Tetris on RP2040</a> (<a href="https://www.youtube.com/watch?v=-ZMKxJcLG8I&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=28">video demonstration</a>)</li>
-</ul>
+</ol>
 
 </div>
 </div>
