--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13101,7 +13101,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Fall,-2023">Fall, 2023<a class="anchor-link" href="#Fall,-2023">&#182;</a></h3><ol>
+<h3 id="Fall,-2023">Fall, 2023<a class="anchor-link" href="#Fall,-2023">&#182;</a></h3><p>Projects listed in no particular order.</p>
+<ol>
 <li><a href="./Fall2023/cdc227_ms2663_vs356/Project%20Introduction.html">Gesture-controlled Game</a> (<a href="https://www.youtube.com/watch?v=eWwDzLKzAFY">video demonstration</a>)</li>
 <li><a href="./Fall2023/jnh84_lcd49/jnh84_lcd49.html">Automated hydroponics system</a> (<a href="https://www.youtube.com/watch?v=3DqP95uvAP0">video demonstration</a>)</li>
 <li><a href="./Fall2023/nnb28_vb269/RPee2040.html">RPee2040</a> (<a href="https://www.youtube.com/watch?v=75KFdw1hYbY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;t=2s">video demonstration</a>)</li>
@@ -13154,7 +13155,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Fall,-2022">Fall, 2022<a class="anchor-link" href="#Fall,-2022">&#182;</a></h3><ol>
+<h3 id="Fall,-2022">Fall, 2022<a class="anchor-link" href="#Fall,-2022">&#182;</a></h3><p>Projects listed in no particular order.</p>
+<ol>
 <li><a href="./Fall2022/mmc323-jah569-rm857/index.html">Persistence of vision LED display</a> (<a href="https://www.youtube.com/watch?v=vRa5mGe45jk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=1">video demonstration</a>)</li>
 <li><a href="./Fall2022/tg382_kaf245/index.html">Recreating the Red Light Green Light doll from Squid Games</a> (<a href="https://www.youtube.com/watch?v=qmjJvgB3ehk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=23">video demonstration</a>)</li>
 <li><a href="./Fall2022/afp65_mib57_ens57/index.html">Handwriting recognition</a> (<a href="https://www.youtube.com/watch?v=teCES6Atgzo&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=39">video demonstration</a>)</li>
