updated lab 2, added more links

--- a/index.html
+++ b/index.html
@@ -13116,7 +13116,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Assignments">Assignments<a class="anchor-link" href="#Assignments">&#182;</a></h2><h4 id="Lab-exercises,-reading,-and-final-project">Lab exercises, reading, and final project<a class="anchor-link" href="#Lab-exercises,-reading,-and-final-project">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/Pico/Birds/Birdsong.html"><strong>Lab 1</strong>: Synthesizing birdsong</a></li>
-<li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Boids_Lab.html"><strong>Lab 2</strong>: Animating murmurations of starlings</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Galton/Galton.html"><strong>Lab 2</strong>: Digital Galton Board</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Helicopter/Helicopter.html"><strong>Lab 3</strong>: PID control of a 1D helicopter</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Final_Project.html"><strong>Final project</strong>: a 4-week, open-ended design project</a></li>
 </ul>
@@ -13196,6 +13196,11 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/Tuning.html">Tuning reaction wheel PID</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Helicopter/MotorCircuit.html">Electrically isolating DC motors</a></li>
 <li><a href="https://vanhunteradams.com/Math/Fourier_drawing/Fourier_Drawing.html">Picasso, by way of Fourier</a></li>
+<li><a href="https://vanhunteradams.com/DE1/Drum/Discretization.html">Discretizing the 2D wave equation</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Galton/Collisions.html">The physics of colliding balls</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Galton/Galton_Stats.html">The statistics of a Galton Board</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Bootloader/Boot_sequence.html">The RP2040 boot sequence</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Bootloader/Infrared.html">Wireless UART via infrared</a></li>
 </ul>
 <h4 id="Communication-protocols">Communication protocols<a class="anchor-link" href="#Communication-protocols">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/Protocols/SPI/SPI.html">SPI communication</a></li>
@@ -13206,6 +13211,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/Cricket/Crickets.html">Synthesizing and synchronizing snowy tree cricket chirps</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Animal_Movement.html">Animating leadership and decision-making in animal groups on the move</a></li>
 <li><a href="https://vanhunteradams.com/Pico/ReactionWheel/ReactionWheel.html">PID control of an inverted pendulum with a reaction wheel</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Animal_Movement/Boids_Lab.html">Animating murmurations of starlings</a></li>
 </ul>
 <h4 id="Applications-and-projects">Applications and projects<a class="anchor-link" href="#Applications-and-projects">&#182;</a></h4><blockquote><p><strong>Hunter (RP2040)</strong></p>
 <ul>
@@ -13219,6 +13225,10 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/Multi/MultiCore.html">Dual-core Direct Digital Synthesis (DDS) via timer interrupts</a></li>
 <li><a href="https://vanhunteradams.com/Pico/DAC/DMA_DAC.html">Simple DMA example</a></li>
 <li><a href="https://vanhunteradams.com/Pico/AM_Radio/AM.html">PWM-based AM transmitter</a></li>
+<li><a href="https://vanhunteradams.com/Pico/BLE/GATT_Server.html">GATT server on Pi Pico W</a></li>
+<li><a href="https://vanhunteradams.com/Pico/BLE/GATT_Client.html">GATT client on Pi Pico W</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Bootloader/Bootloader.html">Custom serial bootloader for RP2040</a></li>
+<li><a href="https://vanhunteradams.com/Pico/Bootloader/Worm.html">Worm-like serial bootloader for RP2040</a></li>
 </ul>
 <p><strong>Bruce (RP2040)</strong></p>
 <ul>
