--- a/index.html
+++ b/index.html
@@ -13167,14 +13167,16 @@ div#notebook {
 <li><a href="https://datasheets.raspberrypi.com/pico/pico-datasheet.pdf">Pi Pico datasheet</a></li>
 </ul>
 <h4 id="Course-infrastructure">Course infrastructure<a class="anchor-link" href="#Course-infrastructure">&#182;</a></h4><ul>
-<li><a href="https://vanhunteradams.com/Pico/Setup/PicoSetup.html">Setting up C/C++ build environment for RP2040 on Windows</a></li>
-<li><a href="https://vanhunteradams.com/Pico/Setup/PicoSetupMac.html">Setting up C/C++ build environment for RP2040 on Mac</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Setup/SDKArchitecture.html">Understanding RP2040 C SDK architecture</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Setup/UsingPicoSDK.html">Using RP2040 C SDK (dissecting a simple example)</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_protothreads/index_Protothreads.html">Protothreads on RP2040 (from Bruce)</a></li>
-<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Building_Demos.html">Building demo code in the computer lab</a></li>
+<li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Building_Demos.html">Installing toolchain and building demo code</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/4760_BOM.pdf">Course bill of materials</a></li>
 </ul>
+<!-- - [Setting up C/C++ build environment for RP2040 on Windows](https://vanhunteradams.com/Pico/Setup/PicoSetup.html)
+- [Setting up C/C++ build environment for RP2040 on Mac](https://vanhunteradams.com/Pico/Setup/PicoSetupMac.html) -->
+
+
 <h4 id="Algorithms-and-techniques">Algorithms and techniques<a class="anchor-link" href="#Algorithms-and-techniques">&#182;</a></h4><ul>
 <li><a href="https://vanhunteradams.com/DDS/DDS.html">Direct Digital Synthesis</a></li>
 <li><a href="https://vanhunteradams.com/FixedPoint/FixedPoint.html">Fixed point arithmetic</a></li>
