--- a/index.html
+++ b/index.html
@@ -13234,18 +13234,25 @@ div#notebook {
 </ul>
 <p><strong>Bruce (RP2040)</strong></p>
 <ul>
-<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_DMA_machine/DMA_machine_rp2040.html">DMA computing machine</a></li>
-<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_Lattice_Boltzmann/index_LB.html">Lattice-Boltzmann on RP2040</a></li>
-<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_Micropython.html">Micropython experimentation on RP2040</a></li>
-<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_fixed_pt/index_fixed.html">Fixed point experimentation on RP2040</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/Startup_message/startup.html">Start-up message and compile info</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_vga16_protothreads/index_vga_Protothreads.html">16-color VGA and Joystick on RP2040</a></li>
-<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_MBED.html">MBED for RP2040 (+steppers, NTSC video, DLA, FFT, Specra)</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_random/index_random.html">Random number generation</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_vga256/index_vga_256.html">8-bit VGA</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_setup/WIFI/index_wifi_setup.html">Wifi setup considerations</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_serial/serial_terminal.html">Making a clean serial command user interface</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_LWIP/UDP_array_send_recv/index_udp_array.html">UDP networking with Pico W</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_LWIP/ntp_rtc_VGA256/index_ntp_vga.html">NTP to RTC</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_LWIP/access_point_server/index_access_pt_version3.html">Web server access point</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_memory/index_memory.html">Interfacing with external memory</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_memory/SD_card/index_sd_card.html">SD card interface with FAT/FS</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_USB/usb%20host/MSC_HID/host_msc_hid.html">USB host with keyboard, mouse, and flash drive</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_DSP/index_iir_s1x14_realtime.html">IIR filter designer</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_DSP/index_fir_s1x14.html">FIR filter designer</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_fixed_pt/index_fixed.html">Fixed point experimentation on RP2040</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_DMA_machine/DMA_machine_rp2040.html">DMA computing machine</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_Lattice_Boltzmann/index_LB.html">Lattice-Boltzmann on RP2040</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_Micropython.html">Micropython experimentation on RP2040</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_MBED.html">MBED for RP2040 (+steppers, NTSC video, DLA, FFT, Specra)</a></li>
 </ul>
 <p><strong>Hunter (PIC32)</strong></p>
 <ul>
