Bruces page on programming methods

--- a/index.html
+++ b/index.html
@@ -13171,6 +13171,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/Setup/UsingPicoSDK.html">Using RP2040 C SDK (dissecting a simple example)</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_protothreads/index_Protothreads.html">Protothreads on RP2040 (from Bruce)</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/Building_Demos.html">Installing toolchain and building demo code</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/hardware/index_pgm_button.html">Programming the Pico from VSCode</a></li>
 <li><a href="https://vanhunteradams.com/Pico/CourseMaterials/4760_BOM.pdf">Course bill of materials</a></li>
 </ul>
 <!-- - [Setting up C/C++ build environment for RP2040 on Windows](https://vanhunteradams.com/Pico/Setup/PicoSetup.html)
