added sunday lab hours

--- a/index.html
+++ b/index.html
@@ -13317,6 +13317,7 @@ div#notebook {
 <ul>
 <li>Lectures (Phillips 101): MWF, 10:10 - 11:00</li>
 <li>Laboratory sections (Phillips 238): MWRF, 13:25-17:25 ; R 8:00-11:00</li>
+<li>Extra open-lab hours (Phillips 238): Sun, 13:00 - 16:00</li>
 <li>Office hours: You may come to any lab section and I'll be there. If you'd like to meet individually, please send me an email.</li>
 </ul>
 <p><strong>Lecture recordings</strong></p>
