linked project pages

--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13101,6 +13101,57 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Spring,-2025">Spring, 2025<a class="anchor-link" href="#Spring,-2025">&#182;</a></h3><p>Projects listed in no particular order.</p>
+<ol>
+<li><a href="./Spring2025/acm289_el595_qx99/index.html">Clocktower LED's</a> (<a href="https://www.youtube.com/watch?v=BlySUTFZxhw&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=35&amp;t=8s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/aj477_ll758_ses439/index.html">Cucumber the robot dog</a> (<a href="https://www.youtube.com/watch?v=myNXUAshH7Q&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=34&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/ajd332_hcc54_jc3656/index.html">Sisyphys-inspired sand drawing table</a> (<a href="https://www.youtube.com/watch?v=nShSFRJ6mLs&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=36&amp;t=3s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/alk246_er495_srb343/index.html">Audio localization</a> (<a href="https://www.youtube.com/watch?v=yFkt5Urp-eg&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=33&amp;t=8s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/am2589_dcl252_mpm297/index.html">Picoscope LiDAR visualizer</a> (<a href="https://www.youtube.com/watch?v=iKAAPpQTxMU&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=27&amp;t=1s&amp;pp=gAQBiAQB0gcJCYsJAYcqIYzv">video demonstration</a>)</li>
+<li><a href="./Spring2025/aml399_ayl47_vml37/index.html">Lulasky baby mobile</a> (<a href="https://www.youtube.com/watch?v=RE1UXRPbN5k&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=32&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/amt263_akv45/index.html">Pitunes Spotify visualizer</a> (<a href="https://www.youtube.com/watch?v=UQ19vx43K88&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=38&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/aoa9_wrc62/index.html">MacroData refinement</a> (<a href="https://www.youtube.com/watch?v=UJgmGBGWcTI&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=31&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/ar933_aks247_dk844/index.html">Spatial audio hat</a> (<a href="https://www.youtube.com/watch?v=l2lWxGuDcH4&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=39&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/ara89_mdy9_fmr35/fractalplant.html">Fractal plant growth game</a> (<a href="https://www.youtube.com/watch?v=W4hgf46dGII&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=30&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/asc269_nh325/website.html">Optical microphone</a></li>
+<li><a href="./Spring2025/ays48_ed433_zm73/index.html">Pico-Fight fighting game</a> (<a href="https://www.youtube.com/watch?v=9E48vPolwk0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=29&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/bjj53_tpm84_pgj23/index.html">Asteroid defense game</a> (<a href="https://www.youtube.com/watch?v=rI8U_539hhM&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=28&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/bl583_ec798_sd722/improved-project-report.html">PicoKart racing game</a> (<a href="https://www.youtube.com/watch?v=RlOSDt7XJNM&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=26&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/bmp85_nan34_mk2378/index.html">Rotor Rascals drone</a> (<a href="https://www.youtube.com/watch?v=U09OIAs0PZI&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=25&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/caw352_jtw88_lsl88/index.html">Cat robot</a> (<a href="https://www.youtube.com/watch?v=dTLU7kqsnGg&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=24&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/crh255_rkg62_ah835/index.html">Tamagatchi</a> (<a href="https://www.youtube.com/watch?v=7-XGvp_WUkg&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=23&amp;t=8s&amp;pp=gAQBiAQB0gcJCYsJAYcqIYzv">video demonstration</a>)</li>
+<li><a href="./Spring2025/csg83_nn234_nkr33/index.html">Active cooling system</a> (<a href="https://www.youtube.com/watch?v=kwYBSgyLhlI&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=22&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/dr655_as4329_cz556/index.html">WiFi battleship</a> (<a href="https://www.youtube.com/watch?v=F7hNVL14WKU&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=21&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/drh253_ec769_pes99/FinalWebsiteText.html">Temu Pebble band</a> (<a href="https://www.youtube.com/watch?v=NpwAM5RAZfg&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=20&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/eav39_pl649/index.html">Interactive synth</a> (<a href="https://www.youtube.com/watch?v=1VEeeVMYbTY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=19&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/hng8_rdh247_dow26/index.html">Simulated mini golf</a> (<a href="https://www.youtube.com/watch?v=e4Qnb9sAIuI&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=18&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/hp475_zf248_asm367/index.html">Virtual table tennis</a> (<a href="https://www.youtube.com/watch?v=A9CqhP-DgnU&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=17&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/jrv67_der242/keyboard--hero.html">Keyboard Hero</a> (<a href="https://www.youtube.com/watch?v=DWg6Y2udlpU&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=37&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/ks875_ttw24_3rdGroupMember/index.html">Nuclear fission simulator</a> (<a href="https://www.youtube.com/watch?v=SqB7Jm-Cdmk&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=2&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/lh543_sg2562_sc2347/index.html">American sign language interpreter</a> (<a href="https://www.youtube.com/watch?v=CpRSksp5dxI&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=8&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/lh657_kaa86/webpage.html">Automatic music stand</a> (<a href="https://www.youtube.com/watch?v=XAOwGxWij40&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=16&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/mtw82_njw66/index.html">Super Mario recreation</a> (<a href="https://www.youtube.com/watch?v=xrWo9agok2s&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=15&amp;t=3s&amp;pp=gAQBiAQB0gcJCYsJAYcqIYzv">video demonstration</a>)</li>
+<li><a href="./Spring2025/nd287_ra495/Shooters_Shoot.html">Shooters shoot tank game</a> (<a href="https://www.youtube.com/watch?v=xsmcP4xbEYs&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=14&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/ngp37_ss4362/index.html">DJ synth pad</a> (<a href="https://www.youtube.com/watch?v=_FUeBRVrDhI&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=13&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/npr29_dak267_nlp52/index.html">Batting simulator</a> (<a href="https://www.youtube.com/watch?v=8WfY9EDrUaY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=12&amp;t=7s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/pis7_kd374_gpm58/index.html">Custom smartwatch</a> (<a href="https://www.youtube.com/watch?v=u0ErQuF8XQI&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=11&amp;pp=gAQBiAQB0gcJCYsJAYcqIYzv">video demonstration</a>)</li>
+<li><a href="./Spring2025/rft38_kjm264/index.html">Pii bowling</a> (<a href="https://www.youtube.com/watch?v=bTKnEO6jgwE&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=10&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/rrn9_jdr322/index.html">Pico Tetris</a> (<a href="https://www.youtube.com/watch?v=Y6LtqJCiJ2E&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=9&amp;t=2s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/smr353_kr562_rga47/index.html">Linus drawing robot</a> (<a href="https://www.youtube.com/watch?v=U21oHzGhfk4&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=1&amp;t=6s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/swz9_ss4335_cc2466/index.html">Game of 24</a> (<a href="https://www.youtube.com/watch?v=oUg7xzAIQH0&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=7&amp;t=6s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/tll68_sy625/index.html">Ball balancing robot</a> (<a href="https://www.youtube.com/watch?v=ooGJBpmrkqI&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=6&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/vv228_vt252/index.html">Handwriting digit detector</a> (<a href="https://www.youtube.com/watch?v=dKF55E84hDM&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=5&amp;t=12s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/xk52-xc539-wy339/index.html">Mathematical art</a> (<a href="https://www.youtube.com/watch?v=eiTUTuILHug&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=4&amp;t=1s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
+<li><a href="./Spring2025/yz2437_al2356_km776/ECE4760FinalWebpage.html">Snake on Gamebrick</a> (<a href="https://www.youtube.com/watch?v=SFzy6Dv6BcY&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=3&amp;t=1s&amp;pp=gAQBiAQB0gcJCYsJAYcqIYzv">video demonstration</a>)</li>
+<li>Jumping video game (private upon request)</li>
+</ol>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Fall,-2023">Fall, 2023<a class="anchor-link" href="#Fall,-2023">&#182;</a></h3><p>Projects listed in no particular order.</p>
 <ol>
 <li><a href="./Fall2023/cdc227_ms2663_vs356/Project%20Introduction.html">Gesture-controlled Game</a> (<a href="https://www.youtube.com/watch?v=eWwDzLKzAFY">video demonstration</a>)</li>
