--- a/index.html
+++ b/index.html
@@ -13097,7 +13097,8 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Lecture-recordings">Lecture recordings<a class="anchor-link" href="#Lecture-recordings">&#182;</a></h2><ul>
-<li>YouTube playlist linked <a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA5oDg8VXM110GKc-CmvUqEZ">here</a> and embedded below. <br><br><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLDqMkB5cbBA5oDg8VXM110GKc-CmvUqEZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+<li>2022 lectures linked <a href="https://www.youtube.com/playlist?list=PLDqMkB5cbBA5oDg8VXM110GKc-CmvUqEZ">here</a>.</li>
+<li>2025 lectures linked <a href="https://youtube.com/playlist?list=PLDqMkB5cbBA4GisLzRSqw5x5G38M4zlkr&amp;si=wS-nuaRsjjqn7WuH">here</a> and embedded below.<br><br><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=6WtyJieDtmOgssqS&amp;list=PLDqMkB5cbBA4GisLzRSqw5x5G38M4zlkr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
 </ul>
 
 </div>
