repairing student images (fission)

--- a/Projects/Spring2025/ks875_ttw24_3rdGroupMember/sd.html
+++ b/Projects/Spring2025/ks875_ttw24_3rdGroupMember/sd.html
@@ -211,7 +211,7 @@
 									
 									<hr class="major" />
 									<h1>Execution Diagram</h1>
-									<p><span class="image fit"><image src="images/program.png" style="width: 40vw; min-width: 330px;" alt="" /></span>
+									<p><span class="image fit"><image src="images/Program.png" style="width: 40vw; min-width: 330px;" alt="" /></span>
 									<p>Core 0 and Core 1 Threads</p>
 									<p><span class="image fit"><image src="images/debounce.jpg" style="width: 40vw; min-width: 330px;" alt="" /></span>
 									<p>Debouncing Logic for Buttons</p>
