--- a/Projects/Spring2025/ks875_ttw24_3rdGroupMember/index.html
+++ b/Projects/Spring2025/ks875_ttw24_3rdGroupMember/index.html
@@ -59,10 +59,10 @@
 									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 
 									<p>Our project was heavily inspired by the <a href="https://www.youtube.com/watch?v=P3oKNE72EzU">Chernobyl Visually Explained</a> video. We aimed to recreate all parts of the simulation on the RP2040 using the 4-bit color VGA library. The simulation models the Soviet-era RBMK nuclear fission reactor. The nuclear fission of Uranium-235 is represented by the following equation:</p>
-									<p><span class="image fit"><image src="images/Capture2.PNG" style="width: 50vw; min-width: 330px;" alt="" /></span>
+									<p><span class="image fit"><image src="images/Capture2.png" style="width: 50vw; min-width: 330px;" alt="" /></span>
 									<p>We simulate a representative section of the fission reactor, including Uranium fuel, neutrons, and various other moderators. All decayed materials are represented as non-fissile nuclei in our simulation.</p>
 									<p>In addition to the simulation and real time statistics, we designed and implemented a user interface that can adjust various parameters of the simulation, including toggling automatic/manual control, adjusting the reactor cooling, target power, simulation speed, etc. Through this control panel, we are able to simulate both controlled and uncontrolled chain reactions.</p>
-									<p><span class="image fit"><image src="images/program.png" style="width: 40vw; min-width: 330px;" alt="" /></span>
+									<p><span class="image fit"><image src="images/Program.png" style="width: 40vw; min-width: 330px;" alt="" /></span>
 									<p>Core 0 and Core 1 Threads</p>
 									<p>Our program is organized as follows: The main simulation and animation takes place on core 0 of the RP2040. In addition, it draws timing sensitive statistics like the frame timing. Core 1 handles the peripheral logic like creating and drawing the graphs in the lower half of the screen. Core 1 also contains additional threads that poll the various hardware inputs. This organizaiton takes advantage of the multi-core architecture of the RP2040.</p>
 								</section>
